--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,16 +11,18 @@
 
 <body>
     <section class="header">
-        <h1>Customers</h1>
+        <p>Customers</p>
     </section>
     <section class="content">
         <div id="tableCard">
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" id="btnOpenModalRegisterCustomer" data-toggle="modal"
-                data-target="#registerCustomerModal" data-backdrop="static" data-keyboard="false">
-                Register Customer
-            </button>
-            <table id="example">
+            <div id="toolbar">
+                <button type="button" class="btn btn-primary" id="btnOpenModalRegisterCustomer" data-toggle="modal"
+                    data-target="#registerCustomerModal" data-backdrop="static" data-keyboard="false">
+                    Register Customer
+                </button>
+            </div>
+
+            <table id="example" class="table table-striped" data-toolbar="#toolbar">
             </table>
         </div>
     </section>
@@ -33,8 +35,7 @@
                 <form id="registerClientForm" action="">
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
+                        <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
                         </button>
                     </div>
                     <div class="modal-body">
