--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -6,6 +6,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/tablesStyle.css}">
     <link rel="stylesheet" th:href="@{/css/modalStyle.css}">
+    <link rel="stylesheet" th:href="@{/css/navStyle.css}">
 </head>
 
 <body>
