--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -4,12 +4,29 @@
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.22.0/dist/bootstrap-table.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link th:href="@{/css/commonStyle.css}" rel="stylesheet" />
     <link rel="stylesheet" th:href="@{/css/tablesStyle.css}">
     <link rel="stylesheet" th:href="@{/css/modalStyle.css}">
     <link rel="stylesheet" th:href="@{/css/navStyle.css}">
 </head>
 
 <body>
+    <div th:fragment="header">
+        <section class="header">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <p class="logo">Sakila</p>
+                    </div>
+                    <ul class="nav">
+                        <li class="active"><a href="/customer">Customer</a></li>
+                        <li><a href="/films">Films</a></li>
+                        <li><a href="#">Rental</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </section>
+    </div>
     <div th:fragment="scripts">
         <script src="https://code.jquery.com/jquery-3.7.0.js"
             integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
